test/ddc-spec/error/01-ErrorExp/53-ProjectCannot/Main.ds

module Main where

main ()
 = ().derp

