test/ddc-spec/error/01-ErrorExp/53-ProjectCannot/Main.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/error/01-ErrorExp/53-ProjectCannot/Main.ds:4:1
  Cannot project field 'derp'
    from value of type: Unit
